--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^10.8.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
   }
